@@ -187,6 +187,7 @@ __all__ = [
     "GRO_huge_box", # for testing gro parser with hige box sizes
     "ITP", # for GROMACS generated itps
     "ITP_nomass", # for ATB generated itps
+    "ITP_atomtypes",  # atom definitions to check atomtyes section parsing
     "NAMDBIN", # for NAMD generated binary file
     "ITP_edited", # to check different directives are read properly
     "ITP_tip5p", # tip5p water from opls-aa, edited with additional keywords
@@ -542,9 +543,11 @@ BATArray = resource_filename(__name__, 'data/mol2_comments_header_bat.npy')
 
 ITP = resource_filename(__name__, 'data/gromacs_ala10.itp')
 ITP_nomass = resource_filename(__name__, 'data/itp_nomass.itp')
+ITP_atomtypes = resource_filename(__name__, 'data/atomtypes.itp')
 ITP_edited = resource_filename(__name__, 'data/edited_itp.itp')
 ITP_tip5p = resource_filename(__name__, "data/tip5p.itp")
 ITP_spce = resource_filename(__name__, 'data/spce.itp')
+
 GMX_TOP = resource_filename(__name__, 'data/gromacs_ala10.top')
 GMX_DIR = resource_filename(__name__, 'data/gromacs/')
 GMX_TOP_BAD = resource_filename(__name__, 'data/bad_top.top')
